- Displayed error message simply below the fields and cause the other fields to slide down slightly to accommodate the spacing. - Fixed issue that “All years must be unique” remain in place even when users fix the issue. - Added same fade in transition for all fields appear in pension estimator form. - Added style for headers of field to make it semi bold. - Also added necessary functions and conditions.

--- a/src/scss/date-picker.scss
+++ b/src/scss/date-picker.scss
@@ -1,33 +1,55 @@
 .date-picker {
   width: 330px;
 }
+
 .react-date-picker.dob-picker {
   display: flex;
   width: 330px;
   height: 38px;
   border: 2px solid $inactive-color;
   border-bottom-left-radius: 0.5rem;
+
   // color: $inactive-color;
   .react-date-picker__wrapper {
     border: 0;
+
     .react-date-picker__inputGroup {
       margin-left: 0.5rem;
     }
   }
+
   .react-date-picker__button {
     width: 30px;
     background-color: $inactive-color;
     text-align: center;
   }
+
   &.is-invalid {
     border-color: $danger;
+
     .react-date-picker__button {
       background-color: white;
     }
   }
-  &:focus, &:active, &:hover {
+
+  &.is-focus {
+    background-color: #fff;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
     border-color: $active-color;
     color: $active-color;
+
+    .react-date-picker__button {
+      background-color: $active-color;
+    }
+  }
+
+  &:focus,
+  &:active,
+  &:hover {
+    border-color: $active-color;
+    color: $active-color;
+
     .react-date-picker__button {
       background-color: $active-color;
     }
