--- a/src/scss/input.scss
+++ b/src/scss/input.scss
@@ -23,3 +23,11 @@ input.form-control {
 .invalid-feedback {
   display: block;
 }
+
+.base-year-check{
+  width: 102px;
+}
+
+.form-label{
+  text-shadow : 0 0 0 #000;
+}
